# standalone-fn

./: .gitignore  Makefile  README.md  pyproject.toml
functions/health/: func.py  func.yaml
